# mcp-github-app-auth

./: .gitignore  Dockerfile  README.md  TESTING.md  mcp_test.sh  pyproject.toml  quick_test.py  requirements.txt  run_tests.py  test_mcp_server.py
.github/workflows/: docker.yml
.qwen/: settings.json
examples/qwen-docker/: README.md  docker-compose.yml  example_usage.py  qwen_settings.json  run_example.sh
mcp_github_app/: auth.py  gh_api.py  git_ops.py  server.py
mcp_github_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: run.sh
tests/: test_auth.py  test_git_ops.py  test_integration.py  test_mcp.sh  test_server.py
